<resources>
    <string name="app_name">Jongeren Participatie Platfrom</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Waar lig je wakker van?</item>
        <item >Hoe oplossen?</item>
        <item >Log In</item>
        <item >Registreer</item>
        <item >Mijn Profiel</item>
        <item >Mijn Dossiers</item>
        <item >Mijn Reacties</item>


    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/questionmarkicon</item>
        <item>@drawable/solutionicon</item>
        <item>@drawable/password_white</item>
        <item>@drawable/registericon_white</item>
        <item>@drawable/user_white</item>
        <item>@drawable/mijn_dossier</item>
        <item>@drawable/mijn_vragen</item>

    </array>

    <string name="SplashScreenLoadText">Even geduld, de applicatie wordt geladen.</string>
    <string name="ImageDescriptionLogoKabaal">Logo gemeente</string>
    <string name="ChangePassword">Wachtwoord Wijzigen</string>
    <string name="CurrentPassword">Huidig wachtwoord</string>
    <string name="NewPassWord">Nieuw wachtwoord</string>
    <string name="ConfirmNewPassword">Bevestig nieuw wachtwoord</string>
    <string name="Confirm">Bevestig</string>
    <string name="MyProfile">Mijn Profiel</string>
    <string name="NameHint">Naam</string>
    <string name="EmailHint">E-mailadres</string>
    <string name="townHint">Gemeente</string>
    <string name="BirthdateHint">Geboortedatum</string>
    <string name="zipcodehint">Postcode</string>
    <string name="Password">Wachtwoord</string>
    <string name="LogOut">Uitloggen</string>
    <string name="LogIn">Inloggen</string>
    <string name="LogInFb">Inloggen met Facebook</string>
    <string name="LogInGPlus">Inloggen met Google+</string>
    <string name="ConfirmPassword">Bevestig wachtwoord</string>
    <string name="ConfirmRegistration">Bevestig registratie</string>
    <string name="Register">Registreer</string>
    <string name="EmptyTextFieldCannotBeEmpty">Dit veld mag niet leeg zijn</string>
    <string name="PasswordsMisMatch">Wachtwoorden komen niet overeen</string>
    <string name="desc_list_item_icon">Item Icon</string>
     <string name="title">Title</string>
    <string name="question_details">Question Details</string>
    <string name="date">Datum</string>
    <string name="letter_a">A</string>
    <string name="author">Auteur</string>
    <string name="anwser">Antwoord</string>
    <string name="votes">Stemmen</string>
    <string name="add_event">Voeg evenement toe</string>
    <string name="event_title">Event title</string>
    <string name="event_description">Event description</string>
    <string name="add">Voeg toe</string>
    <string name="extra">Extra:</string>
    <string name="extra_info">Geef hier je extra uitleg</string>
    <string name="send">Verzenden</string>
    <string name="start_date">Startdatum</string>
    <string name="end_date">Einddatum</string>
    <string name="op">OP</string>
    <string name="tags">Tags</string>
    <string name="load_dossiers">Laad dossiers</string>
    <string name="enter_answer_here">Geef hier je antwoord op</string>
    <string name="dossier_module_setting">Dossiermodule setting:</string>
    <string name="amountofwinners">#Win</string>
    <string name="username">Username</string>
    <string name="add_to_my_dossier">Voeg toe aan mijn dossier</string>
    <string name="dossier_belongs_to">Dossier van</string>
    <string name="location">Locatie</string>
    <string name="events">Evenementen</string>
    <string name="question_and_anwser">Vraag en antwoord</string>
    <string name="amount_votes">#Votes</string>
    <string name="description">Beschrijving</string>
    <string name="no_questions_now">Er zijn op dit moment geen vragen</string>
    <string name="username_or_password_wrong">De gebruikersnaam of wachtwoord is verkeerd</string>
    <string name="something_went_wrong">Er ging iets mis: </string>
    <string name="already_logged_in_as">Je bent al ingelogd als  </string>
    <string name="successfullLogin">Succesvol ingelogd als </string>
    <string name="alreadyloggedOut">Je bent al uitgelogd</string>
    <string name="succesfullLogOut">Je bent succesvol uitgelogd</string>
    <string name="profileDateWillAppearAfterLogin">"Je profielgegevens verschijnen na het inloggen (TODO)"</string>
    <string name="succesfullregister">Succesvol geregistreerd</string>
    <string name="emailAdresError">Foutief email adres</string>
    <string name="minimum_password_length_error">Wachtwoord moet minstens 6 tekens zijn"</string>
    <string name="email_already_registered">Dit email adres is al geregistreerd</string>
    <string name="networkconnectionrequired">Je hebt een netwerkverbinding nodig om deze app te kunnen gebruiken</string>

    <string name="baseUrlRetro">http://10.0.3.2:57252</string>
    <string name="baseUrlRetro2">http://10.134.216.25:8009</string>
    <string name="retrofit_username_or_password_wrong_json">{\"error\":\"invalid_grant\",\"error_description\":\"The user name or password is incorrect.\"}</string>
    <string name="retrofit_invalid_emailformat">{\"Message\":\"The request is invalid.\",\"ModelState\":{\"model.Email\":[\"The Emailadres field is not a valid e-mail address.\"]}}</string>
    <string name="retrofit_password_minimum">{\"Message\":\"The request is invalid.\",\"ModelState\":{\"\":[\"Passwords must be at least 6 characters.\"]}}</string>


    <!-- http://10.134.216.25:8009 -->
</resources>
