<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue_grey_950"

    tools:context=".MainActivity">
    <EditText
        android:id="@+id/myProfile"
        style="@style/myTextViewTop"
        android:background="@drawable/topedittextstyle"
        android:text="@string/ChangePassword"
   />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/myProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">


        <EditText
            android:id="@+id/txtCurrentPassword"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="@string/CurrentPassword"
            android:inputType="textPassword"
        />

        <EditText
            android:id="@+id/txtNewPassword"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="@string/NewPassWord"
            android:inputType="textPassword"

            />

        <EditText
            android:id="@+id/txtConfirmNewPassword"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="@string/ConfirmNewPassword"
            android:inputType="textPassword"
             />


    </LinearLayout>
    <Button
        android:id="@+id/btnConfirmPasswordChange"
        style="@style/btnStyleArsenic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Confirm"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
