<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ProjectBlue"


    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register"
        android:orientation="vertical">


        <EditText
            android:id="@+id/signInUsername"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:drawableStart="@drawable/email"
            android:hint="@string/EmailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signInPassword"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInBtn"
            style="@style/btnStyleArsenic"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/custom_btn_arsenic"
            android:padding="5dp"
            android:text="@string/LogIn" />

        <Button
            android:id="@+id/btnSingInFacebook"
            style="@style/btnStyleArsenic"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/custom_btn_arsenic_fb"
            android:padding="5dp"
            android:text="@string/LogInFb"

            android:textColor="@color/WhiteSmoke" />

        <Button
            android:id="@+id/btnSingInGoogle"
            style="@style/btnStyleArsenic"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/custom_btn_arsenic_google"
            android:padding="5dp"
            android:text="@string/LogInGPlus"
            android:textColor="@color/WhiteSmoke" />
    </LinearLayout>

    <EditText
        android:id="@+id/register"
        style="@style/myTextViewTop"
        android:background="@drawable/topedittextstyle"
        android:text="@string/LogIn" />
</RelativeLayout>
