<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueGrey400"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/cdTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dossier_module_setting"
        android:textColor="@color/WhiteSmoke" />

    <EditText
        android:id="@+id/cdAnswer"
        style="@style/myTextView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/cdTitel"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:hint="@string/enter_answer_here"
        android:inputType="textMultiLine"
        android:maxLength="255"
        android:padding="5dp"
        android:textColorHint="#cccccc" />


    <Button
        android:id="@+id/cdSubmit"
        style="@style/btnStyleArsenic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cdAnswer"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/send" />


</RelativeLayout>