<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BlueGrey800"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dmsDetEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dmsDetQuestioner"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:text="@string/end_date"
            android:textColor="@color/WhiteSmoke" />

        <TextView
            android:id="@+id/dmsDetQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:text="@string/title"
            android:textColor="@color/WhiteSmoke"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/dmsDetQuestioner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dmsDetQuestion"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:scrollbars="vertical"
            android:text="@string/op"
            android:textColor="@color/WhiteSmoke"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/fbvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/dmsDetEndDate"
            android:layout_marginRight="3dp"
            android:drawableLeft="@drawable/fblike"
            android:text="@string/amount_votes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/WhiteSmoke" />

        <EditText
            android:id="@+id/dmsDetExtra"
            style="@style/myTextView.Profile.dossier"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fbvote"
            android:layout_marginTop="24dp"
            android:gravity="top"
            android:inputType="textFilter|textMultiLine|textNoSuggestions"
            android:scrollbars="vertical"
            android:text="@string/extra"
            android:textColor="@color/WhiteSmoke"
            android:textColorHint="@color/LightGrey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText2"
            style="@style/myTextView.Profile.dossier"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dmsDetExtra"
            android:layout_margin="3dp"
            android:gravity="top"
            android:inputType="textFilter|textMultiLine|textNoSuggestions"
            android:scrollbars="vertical"
            android:text="Text2"
            android:textColor="@color/WhiteSmoke"
            android:textColorHint="@color/LightGrey"
            android:textSize="12sp" />

    </RelativeLayout>
</ScrollView>
