<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundandbordersforquestions"
    android:descendantFocusability="blocksDescendants"
    android:weightSum="1">

    <TextView
        android:id="@+id/rUserAndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rAnswer"
        android:padding="2dp"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/WhiteSmoke"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/rAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="3dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:minLines="2"
        android:padding="2dp"
        android:text="@string/anwser"
        android:textColor="@color/WhiteSmoke" />

    <TextView
        android:id="@+id/rVotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/rUserAndDate"
        android:layout_margin="2dp"
        android:paddingRight="5dp"
        android:text="@string/votes"
        android:textColor="@color/WhiteSmoke" />

    <ImageButton
        android:id="@+id/rLikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rVotes"
        android:layout_margin="2dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_toStartOf="@+id/rVotes"
        android:background="@android:color/transparent"
        android:src="@drawable/fblike" />
</RelativeLayout>